--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,13 @@ cmake_minimum_required(VERSION 3.22)
 # set project name
 project(snakeGame VERSION 1.0.1 LANGUAGES C CXX)
 
-# add src and include dir
-add_subdirectories(include)
-add_subdirectories(src)
+# Set compiler options
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	# MP build for MSVC
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /EHsc")
+endif()
+
+# Project declaration
+file(GLOB_RECURSE SOURCES "src/*.cpp" "include/*.hpp")
+add_executable(snakeGame ${SOURCES})
+target_include_directories(snakeGame PUBLIC "include/")
